--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image" href="/logo.png" />
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MOVIES-SUGGESTION</title>
+    <title>Netflix With GPT</title>
   </head>
   <body class=" bg-black">
     <div id="root"></div>
